# origin

./: .gitattributes  .gitignore
Chapter_2/Lesson_10/Task_1/: CMakeLists.txt  source.cpp
Chapter_2/Lesson_10/Task_2/: CMakeLists.txt  EquilateralTriangle.h  Figure.h  IsoscelesTriangle.h  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhomb.h  RightTriangle.cpp  RightTriangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  aux_func.cpp  source.cpp
Chapter_2/Lesson_11/: Lesson_11.sln
Chapter_2/Lesson_11/FiguresDynamicLib/: EquilateralTriangle.cpp  Figure.cpp  Figure.h  FiguresDynamicLib.vcxproj.filters  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.h  Rhomb.h  RightTriangle.cpp  Triangle.h
Chapter_2/Lesson_11/Task_1/: Task_1.sln  (+2 more)
Chapter_2/Lesson_11/Task_5/FiguresDynamicLib/: CMakeLists.txt  EquilateralTriangle.h  Figure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.h  Quadrangle.h  Rectangle.h  Rhomb.h  RightTriangle.h  Square.h  Triangle.cpp  Triangle.h
Racing Simulator/: CmakeLists.txt  RacingSimulator.cpp
Racing Simulator/RacingSimulatorDLL/: AirVehicle.cpp  AirVehicle.h  AuxFunc.cpp  AuxFunc.h  Broom.cpp  Broom.h  Camel.cpp  Camel.h  Centaur.cpp  Centaur.h  CmakeLists.txt  Eagle.cpp  Eagle.h  FastCamel.cpp  FastCamel.h  GroundVehicle.cpp  GroundVehicle.h  MagicCarpet.cpp  MagicCarpet.h  PrintFunc.cpp  PrintFunc.h  Race.cpp  Race.h  SuperBoots.cpp  SuperBoots.h  Vehicle.cpp  Vehicle.h  VehicleData.h  Vehicles.h
Task_1/: task_1.cpp
Task_2/: task_2.cpp
Task_3/: task_3.cpp
(+109 files in other folders)
